<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <name>elbfisch</name>
    <groupId>elbfisch</groupId>    
    <artifactId>elbfisch.core</artifactId>
    <version>4.0.0</version>
    <packaging>jar</packaging>
    <dependencies>
        <dependency>
            <groupId>com.thoughtworks.xstream</groupId>
            <artifactId>xstream</artifactId>
            <version>1.4.19</version>
        </dependency>        
        <dependency>
            <groupId>commons-configuration</groupId>
            <artifactId>commons-configuration</artifactId>
            <version>1.6</version>
        </dependency>        
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.25</version>
        </dependency>
		<dependency>
		    <groupId>org.eclipse.milo</groupId>
		    <artifactId>sdk-client</artifactId>
		    <version>0.3.1</version>
		</dependency>
		<dependency>
		    <groupId>org.eclipse.milo</groupId>
		    <artifactId>sdk-server</artifactId>
		    <version>0.3.1</version>
		</dependency>
		<dependency>
			<groupId>naturalcli</groupId>
			<artifactId>naturalcli</artifactId>
			<version>1.2.3</version>
			<scope>system</scope>
			<systemPath>/Users/berndschuster/projects/javalibs/naturalcli-1.2.3.jar</systemPath>
		</dependency>        
    </dependencies>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>
</project>
